@@ -3,7 +3,6 @@ package com.astromyllc.shootingstar.academics.service;
 import com.astromyllc.shootingstar.academics.dto.request.AssignmentQuestionsRequest;
 import com.astromyllc.shootingstar.academics.dto.response.AssignmentQuestionsResponse;
 import com.astromyllc.shootingstar.academics.model.AssignmentQuestions;
-import com.astromyllc.shootingstar.academics.model.ExamsQuestions;
 import com.astromyllc.shootingstar.academics.repository.AssignmentQuestionRepository;
 import com.astromyllc.shootingstar.academics.serviceInterface.AssignmentQuestionsServiceInterface;
 import com.astromyllc.shootingstar.academics.util.AssignmentQuestionsUtil;
@@ -13,7 +12,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -25,10 +23,10 @@ public class AssignmentQuestionsService implements AssignmentQuestionsServiceInt
 
     @Override
     public List<AssignmentQuestionsResponse> submitAssignmentQuestions(List<AssignmentQuestionsRequest> assignmentQuestionsRequest) {
-        List<AssignmentQuestions> aq= assignmentQuestionsRequest.stream().map(aqr-> assignmentQuestionsUtil.mapAssignmentQestionRequest_ToAssignmentQuestions(aqr)).collect(Collectors.toList());
+        List<AssignmentQuestions> aq= assignmentQuestionsRequest.stream().map(assignmentQuestionsUtil::mapAssignmentQestionRequest_ToAssignmentQuestions).toList();
         assignmentQuestionRepository.saveAll(aq);
-        assignmentQuestionsUtil.assignmentQuestionsGlobalList.addAll(aq);
-        return aq.stream().map(aqr->assignmentQuestionsUtil.mapAssignmentQuestions_ToAssignmentQuestionResponse(aqr)).collect(Collectors.toList());
+        AssignmentQuestionsUtil.assignmentQuestionsGlobalList.addAll(aq);
+        return aq.stream().map(assignmentQuestionsUtil::mapAssignmentQuestions_ToAssignmentQuestionResponse).toList();
 
     }
 
@@ -36,7 +34,7 @@ public class AssignmentQuestionsService implements AssignmentQuestionsServiceInt
     public AssignmentQuestionsResponse submitAssignmentQuestion(AssignmentQuestionsRequest assignmentQuestionsRequest) {
         AssignmentQuestions aq= assignmentQuestionsUtil.mapAssignmentQestionRequest_ToAssignmentQuestions(assignmentQuestionsRequest);
         assignmentQuestionRepository.save(aq);
-        assignmentQuestionsUtil.assignmentQuestionsGlobalList.add(aq);
+        AssignmentQuestionsUtil.assignmentQuestionsGlobalList.add(aq);
         return assignmentQuestionsUtil.mapAssignmentQuestions_ToAssignmentQuestionResponse(aq);
     }
 }
