@@ -12,7 +12,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -24,7 +23,7 @@ public class SelectedExamQuestionsService implements SelectedExamQuestionsServic
 
     @Override
     public List<Optional<SelectedExamQuestionsResponse>> fetchSelectedQuestionsByClassAndTerm(ExamsQuestionsRequest examsQuestionsRequest) {
-        return selectedExamQuestionsUtil.selectedExamQuestionsGlobalList.stream().filter(se->se.getClassId().equalsIgnoreCase(examsQuestionsRequest.getClassId()) && se.getTerm().equalsIgnoreCase(examsQuestionsRequest.getTerm())).map(s->selectedExamQuestionsUtil.mapSelectedExamsQuestion_ToSelectedExamsQuestionResponse(s)).collect(Collectors.toList());
+        return SelectedExamQuestionsUtil.selectedExamQuestionsGlobalList.stream().filter(se->se.getClassId().equalsIgnoreCase(examsQuestionsRequest.getClassId()) && se.getTerm().equalsIgnoreCase(examsQuestionsRequest.getTerm())).map(s->selectedExamQuestionsUtil.mapSelectedExamsQuestion_ToSelectedExamsQuestionResponse(s)).toList();
     }
 
     @Override
