@@ -2,12 +2,9 @@ package com.astromyllc.shootingstar.academics.util;
 
 import com.astromyllc.shootingstar.academics.dto.alien.*;
 import com.astromyllc.shootingstar.academics.dto.request.AcademicReportRequest;
-import com.astromyllc.shootingstar.academics.dto.request.AssessmentRequest;
 import com.astromyllc.shootingstar.academics.dto.request.SingleStringRequest;
 import com.astromyllc.shootingstar.academics.dto.response.*;
 import com.astromyllc.shootingstar.academics.model.Assessment;
-import com.astromyllc.shootingstar.academics.model.ContinuousAssessment;
-import com.astromyllc.shootingstar.academics.model.ExamsAssessment;
 import com.astromyllc.shootingstar.academics.repository.AssessmentRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -17,15 +14,20 @@ import org.springframework.core.ParameterizedTypeReference;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
 import org.springframework.stereotype.Component;
-import org.springframework.web.reactive.function.client.ExchangeFilterFunction;
 import org.springframework.web.reactive.function.client.WebClient;
-import reactor.core.publisher.Mono;
 
+import java.io.InputStream;
 import java.math.BigDecimal;
 import java.math.RoundingMode;
+import java.net.HttpURLConnection;
+import java.net.URL;
+import java.net.URLEncoder;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Future;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 
@@ -39,10 +41,16 @@ public class AssessmentUtil {
     private final ContinuousAssessmentUtil cau;
     private final ExamsAssessmentUtil eau;
     public static List<Assessment> assessmentsGlobalList;
-    private static List<LookupResponse> lookUpGlobalResponse=null;
+    private List<LookupResponse> lookUpGlobalResponse=null;
     public static List<InstitutionRequest> institutionGlobalRequest = null;
-    public static List<Students> studentsGlobalRequest = null;
+    public List<Students> studentsGlobalRequest = null;
     private InstitutionRequest singleInstitutionGlobalRequest = null;
+
+    private final ExecutorService executorService;
+
+   /* public SendSMSJSON(){
+        executorService = Executors.newCachedThreadPool();
+    }*/
 
     static DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
     @Value("${gateway.host}")
@@ -58,44 +66,43 @@ public class AssessmentUtil {
 
 
     public void fetchSetupdata(String institutionCode) {
-        if(singleInstitutionGlobalRequest!=null){
             SingleStringRequest request = SingleStringRequest.builder()
                     .val(institutionCode)
                     .build();
             singleInstitutionGlobalRequest =
-                    WebClient.builder().build().post()
+                    webClientBuilder.build().post()
                             .uri("http://" + host + "/api/setup/getInstitutionByCode")
                             .header(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
                             .bodyValue(request)
                             .retrieve()
                             .bodyToMono(InstitutionRequest.class)
                             .block();
- /*           institutionGlobalRequest=
-                    webClientBuilder.build().post()
-                             .uri("http://"+host+"/api/setup/getInstitutionByCode")
-                             .contentType(MediaType.APPLICATION_JSON)
-                             .accept(MediaType.APPLICATION_JSON)
-                             .retrieve()
-                             .bodyToMono(new ParameterizedTypeReference<List<InstitutionRequest>>() {}).block();*/
-            log.info("Global Setup List populated with {} records", institutionGlobalRequest.size());
+            log.info("Institution {} fetched", singleInstitutionGlobalRequest);
             //return result;
-        }
     }
 
-     @Bean
-    private void fetchStudents() {
+    // @Bean
+    public void fetchStudents(String institutionCode) {
+         SingleStringRequest request = SingleStringRequest.builder()
+                 .val(institutionCode)
+                 .build();
         studentsGlobalRequest = webClientBuilder.build().post()
-                .uri("http://"+host+"/api/administration-pta/getAllStudents")
-                .contentType(MediaType.APPLICATION_JSON)
+                .uri("http://"+host+"/api/administration-pta/getStudentsByInstitution")
+                .header(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
+                .bodyValue(request)
                 .retrieve()
                 .bodyToMono(new ParameterizedTypeReference<List<Students>>() {}).block();
          log.info("Global Students List populated with {} records", studentsGlobalRequest.size());
     }
-    @Bean
-    private void fetchClassGroups() {
+   // @Bean
+    public void fetchClassGroups(String institutionCode) {
+        SingleStringRequest request = SingleStringRequest.builder()
+                .val(institutionCode)
+                .build();
         lookUpGlobalResponse = webClientBuilder.build().post()
                 .uri("http://"+host+"/api/setup/getAllLookUp")
-                .contentType(MediaType.APPLICATION_JSON)
+                .header(HttpHeaders.CONTENT_TYPE, MediaType.APPLICATION_JSON_VALUE)
+                .bodyValue(request)
                 .retrieve()
                 .bodyToMono(new ParameterizedTypeReference<List<LookupResponse>>() {}).block();
         log.info("Global Lookup List populated with {} records", lookUpGlobalResponse.size());
@@ -113,7 +120,7 @@ public class AssessmentUtil {
         return singleInstitutionGlobalRequest.getGradingSetting().getGradingList()
                 .stream()
                 .filter(gr -> gr.getLowerLimit() <= studentScore) // Keep grades that apply
-                .max(Comparator.comparing(gr -> gr.getLowerLimit())) // Get the one with the highest lower limit
+                .max(Comparator.comparing(GradingRequest::getLowerLimit)) // Get the one with the highest lower limit
                 .orElse(null); // Handle cases where no grade is found
     }
 
@@ -136,7 +143,7 @@ public class AssessmentUtil {
         // Flatten the grouped values back into a single list
         return groupedBySubject.values().stream()
                 .flatMap(List::stream)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static Comparator<Assessment> createPersonLambdaComparator() {
@@ -155,17 +162,30 @@ public class AssessmentUtil {
         return assessments;
     }
 
-    public TerminalReportResponse getTerminalReportResponse(List<AssessmentResponse> assessmentResponses, List<Students> studentsGlobalRequest,AcademicReportRequest terminalReportRequest) {
+    public TerminalReportResponse getTerminalReportResponse(List<AssessmentResponse> assessmentResponses,AcademicReportRequest terminalReportRequest) {
         if (singleInstitutionGlobalRequest==null) {
-            singleInstitutionGlobalRequest = institutionGlobalRequest.stream().filter(i -> i.getBececode().equalsIgnoreCase(terminalReportRequest.getInstitutionCode())).findFirst().get();
+            fetchSetupdata(terminalReportRequest.getInstitutionCode());
+            fetchStudents(terminalReportRequest.getInstitutionCode());
+            fetchClassGroups(terminalReportRequest.getInstitutionCode());
         }
       return  buildTerminalReportResponse(assessmentResponses,studentsGlobalRequest);
+    }
+
+    public TerminalReportResponse getTerminalReportResponseWithParent(List<AssessmentResponse> assessmentResponses,AcademicReportRequest terminalReportRequest) {
+        if (singleInstitutionGlobalRequest==null) {
+            fetchSetupdata(terminalReportRequest.getInstitutionCode());
+            fetchStudents(terminalReportRequest.getInstitutionCode());
+            fetchClassGroups(terminalReportRequest.getInstitutionCode());
+        }
+        return  buildTerminalReportResponseWithParent(assessmentResponses,studentsGlobalRequest);
     }
 
     public TerminalReportResponse getTerminalReportResponse(List<AssessmentResponse> assessmentResponses, SingleStringRequest studId) {
         Students stud=studentsGlobalRequest.stream().filter(s->s.getStudentId().equalsIgnoreCase(studId.getVal())).findFirst().get();
         if (singleInstitutionGlobalRequest==null) {
             fetchSetupdata(stud.getInstitutionCode());
+            fetchStudents(stud.getInstitutionCode());
+            fetchClassGroups(stud.getInstitutionCode());
         }
         return  buildTerminalReportResponse(assessmentResponses,stud);
     }
@@ -185,7 +205,32 @@ public class AssessmentUtil {
                     return studentId != null && groupedAssessments.containsKey(studentId) && !groupedAssessments.get(studentId).isEmpty();
                 })
                 .map(student -> mapAssessmentResponse_ToStudentReportResponse(student, groupedAssessments.get(student.getStudentId())))
-                .collect(Collectors.toList())
+                .toList()
+                : new ArrayList<>();
+
+        // Step 3: Build TerminalReportResponse
+        return TerminalReportResponse.builder()
+                .institutionDetail(buildReportInstitutionResponse()) // Assuming this method is implemented
+                .studentReportResponseList(studentReports)
+                .build();
+    }
+
+    public TerminalReportResponse buildTerminalReportResponseWithParent(List<AssessmentResponse> assessmentResponses, List<Students> studentsGlobalRequest) {
+
+        // Step 1: Group assessmentResponses by studentId
+        Map<String, List<AssessmentResponse>> groupedAssessments = (assessmentResponses != null)
+                ? assessmentResponses.stream().collect(Collectors.groupingBy(AssessmentResponse::getStudentId))
+                : new HashMap<>();
+
+        // Step 2: Map students to StudentReportResponse with their assessments
+        List<StudentReportResponse> studentReports = (studentsGlobalRequest != null)
+                ? studentsGlobalRequest.stream()
+                .filter(student -> {
+                    String studentId = student.getStudentId();
+                    return studentId != null && groupedAssessments.containsKey(studentId) && !groupedAssessments.get(studentId).isEmpty();
+                })
+                .map(student -> mapAssessmentResponse_ToStudentReportResponse_withParent(student, groupedAssessments.get(student.getStudentId())))
+                .toList()
                 : new ArrayList<>();
 
         // Step 3: Build TerminalReportResponse
@@ -239,6 +284,7 @@ public class AssessmentUtil {
                 .bececode(singleInstitutionGlobalRequest.getBececode())
                 .contact1(singleInstitutionGlobalRequest.getContact1())
                 .crest(singleInstitutionGlobalRequest.getCrest())
+                .headSignature(singleInstitutionGlobalRequest.getHeadSignature())
                 .classGroup(
                         Optional.ofNullable(cg)
                                 .map(cgValue -> lookUpGlobalResponse.stream()
@@ -312,6 +358,25 @@ public class AssessmentUtil {
                 .build();
     }
 
+
+    public StudentReportResponse mapAssessmentResponse_ToStudentReportResponse_withParent(Students student, List<AssessmentResponse> assessments) {
+        double as=calculateTotalAverage(assessments);
+        GradingRequest g=computeGrade(as);
+        return StudentReportResponse.builder()
+                .id(UUID.randomUUID().toString()) // Assuming an ID is required
+                .studentId(student.getStudentId())
+                .firstName(student.getFirstName())
+                .otherName(student.getOtherName())
+                .lastName(student.getLastName())
+                .gender(student.getGender())
+                .averageScore(String.valueOf(BigDecimal.valueOf(as).setScale(2, RoundingMode.HALF_UP).doubleValue()))
+                .averageGrade(g.getGrade())
+                .averageRemark(g.getComment())
+                .studentAssessment(assessments)
+                .studentParents(student.getStudentParents())
+                .build();
+    }
+
     public double calculateTotalAverage(List<AssessmentResponse> assessments) {
         if (assessments == null || assessments.isEmpty()) {
             return 0.0; // Return 0 if there are no assessments
@@ -337,7 +402,12 @@ public class AssessmentUtil {
 
     public List<Assessment> passExamsAssessment(Map.Entry<String, Map<Long, Map<String, StudentScores>>> sr,AcademicReportRequest terminalReportRequest) {
         String studentClass = sr.getKey(); // Example: "ClassA"
-        singleInstitutionGlobalRequest=institutionGlobalRequest.stream().filter(i->i.getBececode().equalsIgnoreCase(terminalReportRequest.getInstitutionCode())).findFirst().get();
+        if (singleInstitutionGlobalRequest==null) {
+            fetchSetupdata(terminalReportRequest.getInstitutionCode());
+            fetchStudents(terminalReportRequest.getInstitutionCode());
+            fetchClassGroups(terminalReportRequest.getInstitutionCode());
+        }
+        //singleInstitutionGlobalRequest=institutionGlobalRequest.stream().filter(i->i.getBececode().equalsIgnoreCase(terminalReportRequest.getInstitutionCode())).findFirst().get();
         return sr.getValue().entrySet().stream() // Iterate over subjects
                 .flatMap(subjectEntry -> {
                     Long subjectId = subjectEntry.getKey(); // Example: 101
@@ -362,11 +432,16 @@ public class AssessmentUtil {
                                         .build();
                             });
                 })
-                .collect(Collectors.toList()); // Collect all assessments
+                .toList(); // Collect all assessments
     }
     public List<Assessment> passContinuousAssessment(Map.Entry<String, Map<Long, Map<String, StudentScores>>> sr, AcademicReportRequest terminalReportRequest, StudentScores studentScores) {
         String studentClass = sr.getKey(); // Example: "ClassA"
-        singleInstitutionGlobalRequest=institutionGlobalRequest.stream().filter(i->i.getBececode().equalsIgnoreCase(terminalReportRequest.getInstitutionCode())).findFirst().get();
+        if (singleInstitutionGlobalRequest==null) {
+            fetchSetupdata(terminalReportRequest.getInstitutionCode());
+            fetchStudents(terminalReportRequest.getInstitutionCode());
+            fetchClassGroups(terminalReportRequest.getInstitutionCode());
+        }
+        //singleInstitutionGlobalRequest=institutionGlobalRequest.stream().filter(i->i.getBececode().equalsIgnoreCase(terminalReportRequest.getInstitutionCode())).findFirst().get();
 
         return sr.getValue().entrySet().stream() // Iterate over subjects
                 .flatMap(subjectEntry -> {
@@ -391,8 +466,113 @@ public class AssessmentUtil {
                                         .build();
                             });
                 })
-                .collect(Collectors.toList()); // Collect all assessments
+                .toList(); // Collect all assessments
     }
 
+
+    public void sendSMS(List<StudentReportResponse> studentReports, String intitution){
+
+        StringBuilder report = new StringBuilder();
+
+        // Iterate over each student report
+        for (StudentReportResponse studentReport : studentReports) {
+            // Basic report structure
+            StringBuilder studentReportString = new StringBuilder("Dear parent, end of ");
+
+            // Assuming the first assessmentResponse's term is what you want (same for all assessments)
+            if (studentReport.getStudentAssessment() != null && !studentReport.getStudentAssessment().isEmpty()) {
+                String term = studentReport.getStudentAssessment().get(0).getTerm();
+                studentReportString.append(term).append(" report for ");
+            }
+
+            // Add last name
+            studentReportString.append(studentReport.getLastName()).append(" => ");
+
+            // Add subjects and grades
+            StringBuilder subjectsAndGrades = new StringBuilder();
+            for (AssessmentResponse assessment : studentReport.getStudentAssessment()) {
+                subjectsAndGrades.append(assessment.getSubject())
+                        .append(": ")
+                        .append(assessment.getGrade())
+                        .append(" ");
+            }
+
+            // Append subjects and grades to the report
+            studentReportString.append(subjectsAndGrades.toString());
+
+            // Add overall position and grade
+            studentReportString.append("|| Overall Position: ")
+                    .append(studentReport.getAveragePosition())
+                    .append(" Overall Grade: ")
+                    .append(studentReport.getAverageGrade());
+
+            // Append the result to the main report string
+            report.append(studentReportString.toString()).append("\n");
+            List<Parents> sp= studentReport.getStudentParents();
+             sp.forEach (p-> {
+                try {
+                    Future<String> futureResult =  asyncGet(p.getContact1().trim(),studentReportString.toString(),intitution);
+                  String result= futureResult.get();
+                    log.info("Result from asyncGet: " +result);
+                } catch (Exception e) {
+                    log.error("Error during async processing", e);
+                    throw new RuntimeException(e);
+                }
+            });
+        }
+    }
+
+
+
+
+
+
+    public Future<String> asyncGet(String parentContact, String message,String institution) throws Exception
+    {
+        CompletableFuture<String> completableFuture = new CompletableFuture<String>();
+        executorService.execute(() -> {
+            String uri;
+            try {
+                String URIMessage= URLEncoder.encode(( message), "UTF-8");
+                uri = "https://sms.arkesel.com/sms/api?action=send-sms&api_key=aXR0ZE9nblRHQWx4UmlHenFnVVU&to="
+                        + parentContact.trim() + "&from="+ getInitials(institution) +"&sms=" + URIMessage;
+
+                URL url = new URL(uri);
+                HttpURLConnection urlConnection = (HttpURLConnection) url.openConnection();
+                urlConnection.setConnectTimeout(3000);
+                urlConnection.connect();
+                Integer status = urlConnection.getResponseCode();
+                InputStream inputStream;
+                if (status != HttpURLConnection.HTTP_OK)
+                    inputStream = urlConnection.getErrorStream();
+                else
+                    inputStream = urlConnection.getInputStream();
+
+                urlConnection.disconnect();
+                completableFuture.complete(status.toString());
+            } catch (Exception e) {
+                completableFuture.completeExceptionally(e);
+                e.printStackTrace();
+            }
+        });
+
+        return completableFuture;
+    }
+
+    public static String getInitials(String text) {
+        // Split the text by spaces
+        String[] words = text.split(" ");
+        StringBuilder initials = new StringBuilder();
+
+        // Loop through each word and take the first letter
+        for (String word : words) {
+            if (!word.isEmpty()) {
+                initials.append(word.charAt(0));  // Append the first character of each word
+            }
+        }
+
+        // Return the initials as a string
+        return initials.toString().toUpperCase();  // Convert to uppercase for standard initials format
+    }
 
 }
